--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon SEO</title> <!-- replaced "website" with relevant title -->
 </head>
 
 <body>
-    <div class="header">
+    <header> <!-- changed div element with .header class to header element -->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav> <!-- changed div element to nav element -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,9 +22,11 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
+
     <div class="hero"></div>
+
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -48,6 +50,7 @@
             </p>
         </div>
     </div>
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,12 +74,13 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+
+    <footer> <!-- changed div element with .footer class to footer element -->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
