reordered style.css and cleaned sidebar

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header> <!-- changed div element with .header class to header element -->
+    <header> <!-- changed div element with .header class to header semantic element -->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav> <!-- changed div element to nav element -->
             <ul>
@@ -51,31 +51,31 @@
         </div>
     </div>
 
-    <div class="benefits">
-        <div class="benefit-lead">
+    <aside> <!-- changed div element with .benefits class to aside semantic element -->
+        <section> <!-- changed div element with .benefit-lead class to section semantic element -->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section> <!-- changed div element with .benefit-brand class to section semantic element -->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section> <!-- changed div element with .benefit-cost class to section semantic element -->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </section>
+    </aside>
 
-    <footer> <!-- changed div element with .footer class to footer element -->
+    <footer> <!-- changed div element with .footer class to footer semantic element -->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
