cleaned main content section, plus further reordering of style.css and small edits to previously worked-on sections

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header> <!-- changed div element with .header class to header semantic element -->
+    <header> <!-- changed div element with header class to header semantic element -->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav> <!-- changed div element to nav element -->
             <ul>
@@ -27,46 +27,46 @@
 
     <div class="hero"></div>
 
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <main> <!-- changed div element with content class to main semantic element -->
+        <section> <!-- changed div element with search-engine-optimization class to section semantic element -->
+            <img src="./assets/images/search-engine-optimization.jpg" /> <!-- removed defunct float-left class -->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section> <!-- changed div element with online-reputation-management class to section semantic element -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </section>
+        <section> <!-- changed div element with social-media-marketing class to section semantic element -->
+            <img src="./assets/images/social-media-marketing.jpg" /> <!-- removed defunct float-left class -->
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </section>
+    </main>
 
-    <aside> <!-- changed div element with .benefits class to aside semantic element -->
-        <section> <!-- changed div element with .benefit-lead class to section semantic element -->
+    <aside> <!-- changed div element with benefits class to aside semantic element -->
+        <section> <!-- changed div element with benefit-lead class to section semantic element -->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section> <!-- changed div element with .benefit-brand class to section semantic element -->
+        <section> <!-- changed div element with benefit-brand class to section semantic element -->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section> <!-- changed div element with .benefit-cost class to section semantic element -->
+        <section> <!-- changed div element with benefit-cost class to section semantic element -->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
@@ -75,8 +75,8 @@
         </section>
     </aside>
 
-    <footer> <!-- changed div element with .footer class to footer semantic element -->
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer> <!-- changed div element with footer class to footer semantic element -->
+        <h4>Made with ❤️️ by Horiseon</h2> <!-- changed to h4 element to follow sequential headings standard -->
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
