--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,21 +29,21 @@
 
     <main> <!-- changed div element with content class to main semantic element -->
         <section> <!-- changed div element with search-engine-optimization class to section semantic element -->
-            <img src="./assets/images/search-engine-optimization.jpg" /> <!-- removed defunct float-left class -->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook open to a page with 'SEO' in a thought bubble surrounded by the words 'Backlink', 'Content', 'Headings', 'Link Building', 'Social Media', and 'Mobile Compatibility'."/> <!-- removed defunct float-left class and added alt attribute -->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section> <!-- changed div element with online-reputation-management class to section semantic element -->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A laptop displaying a variety of generic graphs and charts beneath the word 'REPUTATION' in bold white letters on a red background."/> <!-- added alt attribute -->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section> <!-- changed div element with social-media-marketing class to section semantic element -->
-            <img src="./assets/images/social-media-marketing.jpg" /> <!-- removed defunct float-left class -->
+            <img src="./assets/images/social-media-marketing.jpg" alt="A group of people sitting around a table littered with a variety of words and icons commonly associated with social media and the internet, such as 'Like', 'Share', a cloud, and a heart symbol."/> <!-- removed defunct float-left class and added alt attribute -->
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -54,21 +54,21 @@
     <aside> <!-- changed div element with benefits class to aside semantic element -->
         <section> <!-- changed div element with benefit-lead class to section semantic element -->
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/> <!-- added alt attribute -->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section> <!-- changed div element with benefit-brand class to section semantic element -->
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/> <!-- added alt attribute -->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section> <!-- changed div element with benefit-cost class to section semantic element -->
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Cost Management"/> <!-- added alt attribute -->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -76,7 +76,7 @@
     </aside>
 
     <footer> <!-- changed div element with footer class to footer semantic element -->
-        <h4>Made with ❤️️ by Horiseon</h2> <!-- changed to h4 element to follow sequential headings standard -->
+        <h4>Made with ❤️️ by Horiseon</h4> <!-- changed to h4 element to follow sequential headings standard -->
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
