small adjustments to figure section

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header> <!-- changed div element with header class to header semantic element -->
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<span>seo</span>n</h1>
         <nav> <!-- changed div element to nav element -->
             <ul>
                 <li>
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <div class="hero"></div>
+    <figure></figure> <!-- changed from div element with hero class to figure semantic element -->
 
     <main> <!-- changed div element with content class to main semantic element -->
         <section> <!-- changed div element with search-engine-optimization class to section semantic element -->
